test_regress/t/t_package_export_bad.out
%Error: t/t_package_export.v:56: Can't find definition of scope/variable: 'PARAM2'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg11::PARAM2 : 0] bus12;
               ^~~~~~
%Error: t/t_package_export.v:57: Can't find definition of scope/variable: 'PARAM3'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg11::PARAM3 : 0] bus13;
               ^~~~~~
%Error: t/t_package_export.v:60: Can't find definition of scope/variable: 'PARAM2'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg21::PARAM2 : 0] bus22;
               ^~~~~~
%Error: t/t_package_export.v:61: Can't find definition of scope/variable: 'PARAM3'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg21::PARAM3 : 0] bus23;
               ^~~~~~
%Error: t/t_package_export.v:64: Can't find definition of scope/variable: 'PARAM2'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg31::PARAM2 : 0] bus32;
               ^~~~~~
%Error: t/t_package_export.v:65: Can't find definition of scope/variable: 'PARAM3'
                               : ... Suggested alternative: 'PARAM1'
   reg [pkg31::PARAM3 : 0] bus33;
               ^~~~~~
%Error: Exiting due to
